Just some random Update

--- a/index.html
+++ b/index.html
@@ -168,15 +168,15 @@
                              class="project-image">
                         
                         <div class="project-details">
-                            <h3 class="project-title">Advanced Calculator</h3>
+                            <h3 class="project-title">Advanced Tip Calculator</h3>
                             <p>
-                                A feature-rich calculator application with scientific operations, history tracking, and keyboard support. 
+                                A feature-rich tip calculator application with scientific operations, history tracking, and keyboard support. 
                                 Demonstrates proficiency in JavaScript logic and user interface design.
                             </p>
                             
                             <p>
-                                <a href="https://github.com/abdulgafarabdurrasheed/calculator" class="external-link" target="_blank">View on GitHub</a> | 
-                                <a href="https://calc_me.netlify.app" class="external-link" target="_blank">Live Demo</a>
+                                <a href="https://github.com/abdulgafarabdurrasheed/" class="external-link" target="_blank">View on GitHub</a> | 
+                                <a href="https://calctip5.netlify.app/" class="external-link" target="_blank">Live Demo</a>
                             </p>
                         </div>
                     </div>
@@ -284,4 +284,5 @@
     <script src="script.js" defer></script>
 </body>
 </html>
+
 
